logs/dockerscript.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/colored'...
Listing './lib/python3.5/site-packages/colored-1.3.4.egg-info'...
Listing './lib/python3.5/site-packages/dockerscript'...
Compiling './lib/python3.5/site-packages/dockerscript/image.py'...
***   File "./lib/python3.5/site-packages/dockerscript/image.py", line 17
    operations: typing.List[dockerscript.operations.Operation]
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockerscript/operations'...
Compiling './lib/python3.5/site-packages/dockerscript/operations/base_image.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/base_image.py", line 15
    name: str
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/command.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/command.py", line 15
    command: str
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/copy.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/copy.py", line 15
    sources: typing.List[str]
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/environment.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/environment.py", line 15
    variables: typing.Dict[str, typing.Any]
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/expose.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/expose.py", line 15
    ports: typing.List[typing.Union[int, str]]
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/healthcheck.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/healthcheck.py", line 15
    command: str
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/label.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/label.py", line 15
    labels: typing.Dict[str, typing.Any]
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/run.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/run.py", line 15
    commands: typing.List[str]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/shell.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/shell.py", line 15
    shell: str
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerscript/operations/workdir.py'...
***   File "./lib/python3.5/site-packages/dockerscript/operations/workdir.py", line 16
    path: pathlib.Path
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockerscript-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/operations'...
Compiling './lib/python3.5/site-packages/tests/operations/test_copy.py'...
***   File "./lib/python3.5/site-packages/tests/operations/test_copy.py", line 30
    f'COPY ["{source}", "{destination}"]',
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/operations/test_environment.py'...
***   File "./lib/python3.5/site-packages/tests/operations/test_environment.py", line 26
    f'ENV {key}={value}',
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/operations/test_run.py'...
***   File "./lib/python3.5/site-packages/tests/operations/test_run.py", line 26
    f'RUN {command}',
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/operations/test_workdir.py'...
***   File "./lib/python3.5/site-packages/tests/operations/test_workdir.py", line 26
    f'WORKDIR {path}',
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_image.py'...
***   File "./lib/python3.5/site-packages/tests/test_image.py", line 106
    expected_file = f'FROM {base_image}\n'
                                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
